--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,6 +7,12 @@
     <title>Vite App</title>
   </head>
   <body>
+    <div class="options">
+      <button class="options-button">10/10</button>
+      <button class="options-button">Recent</button>
+      <button class="options-button">Over an Hour</button>
+      <button class="options-button">Shoegaze</button>
+    </div>
     <div id="app"></div>
     <script type="module" src="./js/main.js"></script>
   </body>
