--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,10 +8,39 @@
   </head>
   <body>
     <div class="options">
+      <button class="options-button">Everything</button>
       <button class="options-button">10/10</button>
       <button class="options-button">Recent</button>
       <button class="options-button">Over an Hour</button>
-      <button class="options-button">Shoegaze</button>
+      <select name="genres" id="genres">
+        <option value="indie rock"></option>
+        <option value="lo-fi"></option>
+        <option value="alternative rock"></option>
+        <option value="pyschedelic folk"></option>
+        <option value="shoegaze"></option>
+        <option value="dream pop"></option>
+        <option value="noise rock"></option>
+        <option value="avant-rock"></option>
+        <option value="power pop"></option>
+        <option value="emo"></option>
+        <option value="pop punk"></option>
+        <option value="post-rock"></option>
+        <option value="chamber pop"></option>
+        <option value="art rock"></option>
+        <option value="dark ambient"></option>
+        <option value="gothic rock"></option>
+        <option value="industrial rock"></option>
+        <option value="progressive pop"></option>
+        <option value="psychedelic pop"></option>
+        <option value="indie pop"></option>
+        <option value="hip hop"></option>
+        <option value="funk"></option>
+        <option value="R&B"></option>
+        <option value="neo soul"></option>
+        <option value="post-punk"></option>
+        <option value="dance-punk"></option>
+        <option value="art punk"></option>
+      </select>
     </div>
     <div id="app"></div>
     <script type="module" src="./js/main.js"></script>
