--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="cool">
+  <body class="gellow">
     <h1 class="header">Hello world</h1>
     <div class="options">
       <button class="options-button">Everything</button>
