--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body class="gellow">
+  <body class="cool">
     <h1 class="header">Hello world</h1>
     <div class="options">
+      <button class="change">Theme</button>
       <button class="options-button">Everything</button>
       <button class="options-button">10/10</button>
       <button class="options-button">Recent</button>
