--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Album Recommendations</title>
   </head>
   <body class="cool">
     <h1 class="header">Hello world</h1>
