ermmm what the heck :neutral_face:

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,14 +7,14 @@
     <title>Album Recommendations</title>
   </head>
   <body class="cool">
-    <h1 class="header">Hello world</h1>
+    <h1 class="header">Hello World</h1>
     <div class="options">
       <button class="change">Theme</button>
-      <button class="options-button">Everything</button>
-      <button class="options-button">10/10</button>
-      <button class="options-button">Recent</button>
-      <button class="options-button">Over an Hour</button>
-      <button class="options-button">Lo-Fi</button>
+      <button class="options-button everything">Everything</button>
+      <button class="options-button ten">10/10</button>
+      <button class="options-button recent">Recent</button>
+      <button class="options-button hour">Over an Hour</button>
+      <button class="options-button lo-fi">Lo-Fi</button>
     </div>
     <div id="app"></div>
     <script type="module" src="./js/main.js"></script>
