--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -7,7 +7,7 @@
     <title>Album Recommendations</title>
   </head>
   <body class="cool">
-    <h1 class="header">Hello World</h1>
+    <h1 class="header">Album Recommendations</h1>
     <div class="options">
       <button class="change">Theme</button>
       <button class="options-button everything">Everything</button>
