th end :athletic_shoe:

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Album Recommendations</title>
   </head>
   <body class="cool">
     <h1 class="header">Album Recommendations</h1>
     <div class="options">
-      <button class="change">Theme</button>
+      <button class="options-button theme">Theme</button>
       <button class="options-button everything">Everything</button>
       <button class="options-button ten">10/10</button>
       <button class="options-button recent">Recent</button>
       <button class="options-button hour">Over an Hour</button>
-      <button class="options-button lo-fi">Lo-Fi</button>
-    </div>
+      <button class="options-button lo-fi">Lo-Fi</button>   
     <div id="app"></div>
+  </div>
     <script type="module" src="./js/main.js"></script>
   </body>
 </html>
